# Botmaster

./: .gitignore  README.md  environment.yml  requirements.txt  setup.py  test_env.py
04 - meeting_minutes/meeting_minutes/: action_items.txt  summary.txt
04 - meeting_minutes/src/meeting_minutes/crews/gmail/tools/: credentials.json  token.json
04 - meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
04 - meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/config/: agents.yaml  tasks.yaml
Botmaster/01 - CleanAirMarketingCrew/: README.md  requirements.txt
Botmaster/01 - CleanAirMarketingCrew/src/: crew.py  main.py
Botmaster/01 - CleanAirMarketingCrew/src/config/: agents.yaml  tasks.yaml
Botmaster/01 - CleanAirMarketingCrew/src/db/: chroma.sqlite3
meeting_minutes/: .env.examples
meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
meeting_minutes/src/meeting_minutes/: README.md  main.py  pydub_test.py  toolbox_talk_form.py
meeting_minutes/src/meeting_minutes/crews/gmail/: gmail.py
meeting_minutes/src/meeting_minutes/crews/gmail/config/: agents.yaml  tasks.yaml
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
meeting_minutes/src/meeting_minutes/meeting_minutes/: action_items.txt  summary.txt
pdf_search/: README.md  pyproject.toml  report.md
pdf_search/pdf/: 2411.05285.txt
pdf_search/src/pdf_search/: crew.py  main.py  master-crewai-course.code-workspace  report.md
pdf_search/src/pdf_search/config/: agents.yaml  tasks.yaml
(+6 files in other folders)
