[project]
name = "pdf_search"
version = "0.1.0"
description = "pdf_search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
pdf_search = "pdf_search.main:run"
run_crew = "pdf_search.main:run"
train = "pdf_search.main:train"
replay = "pdf_search.main:replay"
test = "pdf_search.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
